Fix the letter-spacing

--- a/app/assets/css/components/_header.scss
+++ b/app/assets/css/components/_header.scss
@@ -22,6 +22,7 @@
         margin-right: auto;
         font-size: 36px;
         font-weight: lighter;
+        letter-spacing: 0.02em;
 
         &:not(.header__name--short) {
             @include media('<500px') {
